gcc/testsuite/g++.dg/modules/mod++-decl-0_c.C
// { dg-options "-fmodules++" }
module thing;

module
{
  void bink ();
}

void bonk ()
{
  baz ();
  bar (); // { dg-error "not declared" }
  bink ();
}
